Added plant profiles w/individual timers

--- a/watering-the-plants.html
+++ b/watering-the-plants.html
@@ -1,10 +1,37 @@
 <html>
 <head>
-  <title>Plants</title>
+  <title>Plant Party</title>
 </head>
 <body>
   <h1>When did you last water the plants?</h1>
-  <h1><time id="date"></time></h1>
-  <h2><button id="button">I just watered them!</button>
-  <script src="watering-the-plants.js"></script>
-</body>
+  <div>
+    <h2>Fern</h2>
+    <h1><time id="fern-date"></time></h1>
+    <h2><button id="fern-button">I just watered the fern!</button>
+    </div>
+
+    <div>
+      <h2>Cactus</h2>
+      <h1><time id="cactus-date"></time></h1>
+      <h2><button id="cactus-button">I just watered the cactus!</button>
+        <div>
+
+          <div>
+            <h2>Succulent</h2>
+            <h1><time id="succulent-date"></time></h1>
+            <h2><button id="succulent-button">I just watered the succulent!</button>
+            </div>
+
+            <div>
+              <h2>Hoya</h2>
+              <h1><time id="hoya-date"></time></h1>
+              <h2><button id="hoya-button">I just watered the hoya!</button>
+              </div>
+
+              <div>
+                <h2>Asparagus Fern</h2>
+                <h1><time id="asparagusfern-date"></time></h1>
+                <h2><button id="asparagusfern-button">I just watered the asparagus fern!</button>
+                </div>
+                <script src="watering-the-plants.js"></script>
+              </body>
