Began style sheet

--- a/watering-the-plants.html
+++ b/watering-the-plants.html
@@ -1,37 +1,61 @@
 <html>
 <head>
   <title>Plant Party</title>
+  <link rel="stylesheet" href="watering-the-plants.css">
 </head>
 <body>
-  <h1>When did you last water the plants?</h1>
-  <div>
-    <h2>Fern</h2>
-    <h1><time id="fern-date"></time></h1>
-    <h2><button id="fern-button">I just watered the fern!</button>
-    </div>
+  <nav>
+    <h1>PLANT PARTY!</h1>
+    <h2>When did you last water the plants?</h2>
+  </nav>
+  <div class='main'>
+    <div class='fern'>
+      <div class='plant-text'>
+        <h2>Fern</h2>
+        <h1><time id="fern-date"></time></h1>
+        <h2><button id="fern-button">I just watered the fern!</button>
+        </div>
+      </div>
 
-    <div>
-      <h2>Cactus</h2>
-      <h1><time id="cactus-date"></time></h1>
-      <h2><button id="cactus-button">I just watered the cactus!</button>
-        <div>
+      <div class='cactus'>
+        <div class='plant-text'>
+          <h2>Cactus</h2>
+          <h1><time id="cactus-date"></time></h1>
+          <h2><button id="cactus-button">I just watered the cactus!</button>
+          </div>
+        </div>
 
-          <div>
+        <div class='succulent'>
+          <div class='plant-text'>
             <h2>Succulent</h2>
             <h1><time id="succulent-date"></time></h1>
             <h2><button id="succulent-button">I just watered the succulent!</button>
             </div>
+          </div>
 
-            <div>
+          <div class='hoya'>
+            <div class='plant-text'>
               <h2>Hoya</h2>
               <h1><time id="hoya-date"></time></h1>
               <h2><button id="hoya-button">I just watered the hoya!</button>
               </div>
+            </div>
 
-              <div>
+            <div class='asparagus-fern'>
+              <div class='plant-text'>
                 <h2>Asparagus Fern</h2>
                 <h1><time id="asparagusfern-date"></time></h1>
                 <h2><button id="asparagusfern-button">I just watered the asparagus fern!</button>
                 </div>
-                <script src="watering-the-plants.js"></script>
-              </body>
+              </div>
+
+              <div class='new-plant'>
+                <div class='plant-text'>
+                  <h1>Got a new plant?</h1>
+                  <h1>Add a new plant</h1>
+                </div>
+              </div>
+
+              <script src="watering-the-plants.js"></script>
+            </div>
+          </body>
