Refactored individual plant timer functions

--- a/watering-the-plants.html
+++ b/watering-the-plants.html
@@ -5,7 +5,7 @@
 </head>
 <body>
   <nav>
-    <h1>PLANT PARTY!</h1>
+    <h1>PLANT PARTY</h1>
     <h2>When did you last water the plants?</h2>
   </nav>
   <div class='main'>
@@ -13,7 +13,7 @@
       <div class='plant-text'>
         <h2>Fern</h2>
         <h1><time id="fern-date"></time></h1>
-        <h2><button id="fern-button">I just watered the fern!</button>
+        <h2><button id="fern-button" data-id="fern-last-watered">I just watered the fern!</button>
         </div>
       </div>
 
@@ -21,7 +21,7 @@
         <div class='plant-text'>
           <h2>Cactus</h2>
           <h1><time id="cactus-date"></time></h1>
-          <h2><button id="cactus-button">I just watered the cactus!</button>
+          <h2><button id="cactus-button" data-id="cactus-last-watered">I just watered the cactus!</button>
           </div>
         </div>
 
@@ -29,7 +29,7 @@
           <div class='plant-text'>
             <h2>Succulent</h2>
             <h1><time id="succulent-date"></time></h1>
-            <h2><button id="succulent-button">I just watered the succulent!</button>
+            <h2><button id="succulent-button" data-id="succulent-last-watered">I just watered the succulent!</button>
             </div>
           </div>
 
@@ -37,7 +37,7 @@
             <div class='plant-text'>
               <h2>Hoya</h2>
               <h1><time id="hoya-date"></time></h1>
-              <h2><button id="hoya-button">I just watered the hoya!</button>
+              <h2><button id="hoya-button" data-id="hoya-last-watered">I just watered the hoya!</button>
               </div>
             </div>
 
@@ -45,7 +45,7 @@
               <div class='plant-text'>
                 <h2>Asparagus Fern</h2>
                 <h1><time id="asparagusfern-date"></time></h1>
-                <h2><button id="asparagusfern-button">I just watered the asparagus fern!</button>
+                <h2><button id="asparagusfern-button" data-id="asparagusfern-last-watered">I just watered the asparagus fern!</button>
                 </div>
               </div>
 
